--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="global_resources/styles/icons.css">
+    <link rel="stylesheet" href="global_resources/styles/global_layout.css">
+    <link rel="stylesheet" href="global_resources/styles/articles_style.css">
+
+    <title>Maintenance</title>
+</head>
+<body>
+
+    <script src="global_resources/scripts/global_js.js"></script>
+
+    <header class="page_head">
+        <nav class="menu">
+
+            <div id="home_theme_btns_container">
+
+                <div class="menu_elem"><a class="icon-house link" href="index.html"></a></div>
+                <div class="menu_elem"><span class="icon-theme link" id="change_theme_id" onclick="change_theme()"></span></div>
+            </div>
+            
+        </nav>
+
+    </header>
+
+    <div class="page_body">
+
+        <div class="empty_page_container">
+
+            <h1 class="art_title">Oh, how empty :/</h1>
+            <p class="art_content">Looks like my lazy owner has finally decided to do some maintenance...</p>
+
+        </div>
+    </div>
+
+    <footer class="page_foot">
+        <a class="art_content_link" href="https://github.com/iinviio" target="_blank">Follow me on GitHub!
+            <span class="icon-github link"></span>
+        </a>
+    </footer>
+    
+</body>
+</html>
